<resources>
    <string name="booking_upload_choose_file">Choose file</string>
    <string name="booking_upload_uploading">Uploading...</string>
    <string name="app_name">M-connect</string>
    <string name="brand_name">MANJU GROUPS</string>
    <string name="logo_letter">M</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_subtitle">Sign in to my account</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_hint">98765 43210</string>
    <string name="country_code">+91</string>
    <string name="send_otp">Sign In</string>
    <string name="lets_start">Sign In</string>
    <string name="welcome_screen_title">Navigate Your Work\nJourney Efficient &amp; Easy</string>
    <string name="welcome_screen_body">Increase your work management &amp; career\ndevelopment radically</string>
    <string name="welcome_chip_tracking">Live Tracking</string>
    <string name="home_hero_eyebrow">Today\'s Attendance</string>
    <string name="home_section_in_progress">In Progress</string>
    <string name="home_section_groups">Task Groups</string>
    <string name="home_section_sessions">Today\'s Sessions</string>
    <string name="terms_footer">By continuing, you agree to our Terms of Service</string>
    <string name="verify_title">Sign In Phone Number</string>
    <string name="otp_subtitle">Sign in code has been sent to +91%s,\ncheck your inbox to continue the sign in process.</string>
    <string name="verify">Submit</string>
    <string name="resend_otp_timer">Resend in %s</string>
    <string name="resend_code">Haven\'t received the verification code?</string>
    <string name="resend_code_prompt">Resend it.</string>
    <string name="phone_required">Please enter your phone number</string>
    <string name="phone_invalid">Please enter a valid 10-digit phone number</string>
    <string name="otp_incomplete">Please enter the complete 6-digit code</string>
    <string name="back">Back</string>
    <string name="sign_in_title">Sign In</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_label">OR</string>
    <string name="sign_in_employee_id">Sign in With Employee ID</string>
    <string name="sign_in_phone">Sign in With Phone</string>
    <string name="signup_hint">Don\'t have an account? Sign Up Here</string>
    <string name="different_method">Sign in with different method Here.</string>
    <string name="employee_id_coming_soon">Employee ID sign in will be available soon.</string>
    <string name="joint_cp">Joint CP</string>
    <string name="joint_cp_toggle_summary">Add a second staff to this visit</string>
    <string name="cp_client_out_of_station">Client is out of station</string>
    <string name="cp_client_out_of_station_hint">No CP is created. The GM confirms on mobile and that creates the site visit.</string>
    <string name="cp_send_to_gm">Send to GM</string>
    <string name="cp_create_visit">Create visit</string>
    <string name="back_button_description">Back</string>
</resources>
